--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -1628,6 +1628,82 @@ Version 1.0.0</string>
             </objects>
             <point key="canvasLocation" x="-483" y="2018"/>
         </scene>
+        <!--Transcription View Controller-->
+        <scene sceneID="NXB-zn-yMV">
+            <objects>
+                <viewController storyboardIdentifier="TranscriptionViewController" id="1Bg-ri-6QX" customClass="TranscriptionViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z8n-q3-fY0"/>
+                        <viewControllerLayoutGuide type="bottom" id="ejU-8S-3Pi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gjA-YU-wnN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4UV-UK-SfO" userLabel="NavigationView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Transcription" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uD4-WO-N2K">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOQ-eK-cND">
+                                        <rect key="frame" x="0.0" y="24" width="40" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="VOQ-eK-cND" secondAttribute="height" multiplier="20:17" id="uTJ-WN-ZcV"/>
+                                        </constraints>
+                                        <state key="normal" image="icon_back"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="1Bg-ri-6QX" eventType="touchUpInside" id="HlL-gN-9cv"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.3411764706" green="0.72941176470000002" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="uD4-WO-N2K" firstAttribute="leading" secondItem="4UV-UK-SfO" secondAttribute="leading" id="3XT-NN-cJd"/>
+                                    <constraint firstAttribute="bottom" secondItem="VOQ-eK-cND" secondAttribute="bottom" constant="6" id="FSv-gk-GuO"/>
+                                    <constraint firstItem="uD4-WO-N2K" firstAttribute="top" secondItem="4UV-UK-SfO" secondAttribute="top" constant="20" id="Ged-jA-mLd"/>
+                                    <constraint firstAttribute="trailing" secondItem="uD4-WO-N2K" secondAttribute="trailing" id="O2V-Ld-Avo"/>
+                                    <constraint firstItem="VOQ-eK-cND" firstAttribute="top" secondItem="4UV-UK-SfO" secondAttribute="top" constant="24" id="Uwg-ym-QVO"/>
+                                    <constraint firstItem="VOQ-eK-cND" firstAttribute="leading" secondItem="4UV-UK-SfO" secondAttribute="leading" id="i6r-1V-YFg"/>
+                                    <constraint firstAttribute="bottom" secondItem="uD4-WO-N2K" secondAttribute="bottom" id="nkc-y1-9FM"/>
+                                    <constraint firstAttribute="height" constant="64" id="zTU-ar-DZy"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6by-4X-Mcb">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="1Bg-ri-6QX" id="H3Z-vH-t9S"/>
+                                    <outlet property="delegate" destination="1Bg-ri-6QX" id="hhA-CQ-71d"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4UV-UK-SfO" firstAttribute="leading" secondItem="gjA-YU-wnN" secondAttribute="leading" id="CoB-99-8e5"/>
+                            <constraint firstItem="4UV-UK-SfO" firstAttribute="top" secondItem="gjA-YU-wnN" secondAttribute="top" id="Jke-G3-HLn"/>
+                            <constraint firstItem="6by-4X-Mcb" firstAttribute="top" secondItem="4UV-UK-SfO" secondAttribute="bottom" id="bs1-9u-G9J"/>
+                            <constraint firstAttribute="trailing" secondItem="4UV-UK-SfO" secondAttribute="trailing" id="ml9-8T-Ydj"/>
+                            <constraint firstAttribute="trailing" secondItem="6by-4X-Mcb" secondAttribute="trailing" id="puD-8M-QtY"/>
+                            <constraint firstItem="6by-4X-Mcb" firstAttribute="leading" secondItem="gjA-YU-wnN" secondAttribute="leading" id="twL-OW-hBq"/>
+                            <constraint firstItem="ejU-8S-3Pi" firstAttribute="top" secondItem="6by-4X-Mcb" secondAttribute="bottom" id="wfZ-Se-QCS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="FsH-Vs-e8I"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="tableView" destination="6by-4X-Mcb" id="Dx9-1r-aot"/>
+                        <outlet property="titleLabel" destination="uD4-WO-N2K" id="lGn-gh-lIP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ecB-t9-i41" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1019" y="-674"/>
+        </scene>
     </scenes>
     <resources>
         <image name="avatar" width="70" height="70"/>
