--- a/Peppermint/FoggyRecordingView.xib
+++ b/Peppermint/FoggyRecordingView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -58,13 +58,13 @@
                                     </constraints>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand" translatesAutoresizingMaskIntoConstraints="NO" id="VMa-LE-Uoa">
-                                    <rect key="frame" x="62" y="18" width="32" height="30"/>
+                                    <rect key="frame" x="60" y="18" width="36" height="34"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="VMa-LE-Uoa" secondAttribute="height" multiplier="16:15" id="Wgo-W1-jKr"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="4" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X9f-Kf-C2h">
-                                    <rect key="frame" x="0.0" y="49" width="155" height="50"/>
+                                    <rect key="frame" x="10" y="53" width="135" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="X9f-Kf-C2h" secondAttribute="height" multiplier="31:10" id="6Df-uZ-Ehy"/>
                                     </constraints>
@@ -77,8 +77,8 @@ to cancel</string>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="X9f-Kf-C2h" secondAttribute="trailing" id="518-DR-4DH"/>
-                                <constraint firstAttribute="bottom" secondItem="X9f-Kf-C2h" secondAttribute="bottom" constant="16" id="6bX-ER-pdM"/>
+                                <constraint firstAttribute="trailing" secondItem="X9f-Kf-C2h" secondAttribute="trailing" constant="10" id="518-DR-4DH"/>
+                                <constraint firstAttribute="bottom" secondItem="X9f-Kf-C2h" secondAttribute="bottom" constant="18" id="6bX-ER-pdM"/>
                                 <constraint firstItem="VMa-LE-Uoa" firstAttribute="centerX" secondItem="vH6-fW-WGx" secondAttribute="centerX" id="6fd-YW-MbE"/>
                                 <constraint firstItem="VMa-LE-Uoa" firstAttribute="top" secondItem="vH6-fW-WGx" secondAttribute="top" constant="18" id="73F-Yf-GJM"/>
                                 <constraint firstItem="X9f-Kf-C2h" firstAttribute="top" secondItem="VMa-LE-Uoa" secondAttribute="bottom" constant="1" id="TlL-hj-RnD"/>
@@ -87,7 +87,7 @@ to cancel</string>
                                 <constraint firstAttribute="width" secondItem="vH6-fW-WGx" secondAttribute="height" multiplier="31:23" id="cs0-nE-vHz"/>
                                 <constraint firstAttribute="trailing" secondItem="50Q-Ac-aKf" secondAttribute="trailing" id="ho4-wm-2f9"/>
                                 <constraint firstItem="50Q-Ac-aKf" firstAttribute="leading" secondItem="vH6-fW-WGx" secondAttribute="leading" id="odR-4c-4Zk"/>
-                                <constraint firstItem="X9f-Kf-C2h" firstAttribute="leading" secondItem="vH6-fW-WGx" secondAttribute="leading" id="pFx-nY-p76"/>
+                                <constraint firstItem="X9f-Kf-C2h" firstAttribute="leading" secondItem="vH6-fW-WGx" secondAttribute="leading" constant="10" id="pFx-nY-p76"/>
                                 <constraint firstAttribute="bottom" secondItem="50Q-Ac-aKf" secondAttribute="bottom" id="uIz-W1-uiz"/>
                             </constraints>
                             <variation key="default">
