--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -1453,8 +1453,11 @@ Version 1.0.0</string>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dbi-qO-9Kg">
-                                <rect key="frame" x="0.0" y="64" width="320" height="464"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="65"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="mSC-IR-zmA"/>
+                                </constraints>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="IEQ-ag-O6Y" id="84z-lw-LzF"/>
@@ -1462,7 +1465,7 @@ Version 1.0.0</string>
                                 </connections>
                             </tableView>
                             <label opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Or email us for support" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-lH-nLt" userLabel="SupportEmailLabel">
-                                <rect key="frame" x="0.0" y="528" width="320" height="40"/>
+                                <rect key="frame" x="0.0" y="129" width="320" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dvB-rJ-TMT"/>
                                 </constraints>
@@ -1523,6 +1526,7 @@ Version 1.0.0</string>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="XIK-Jr-PpB"/>
+                                <exclude reference="1aX-3b-BYg"/>
                             </mask>
                         </variation>
                     </view>
